enhancement : Added image for landing page.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h3>Proposal for SB Website</h3>
+					<p> - by Takshak Ramteke</p>
+				</section>
+				<section>
+					<h5>Landing Page</h5>
+					<img src="./images/iMac - 1.png" alt="" srcset="">
+				</section>
 			</div>
 		</div>
 
