enhancement : Added the prototype images for all pages.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,34 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h3>Proposal for SB Website</h3>
-					<p> - by Takshak Ramteke</p>
+						<h3>Proposal for SB Website</h3>
+						<p> - by Takshak Ramteke</p>
 				</section>
 				<section>
-					<h5>Landing Page</h5>
-					<img src="./images/iMac - 1.png" alt="" srcset="">
+					<section>
+						<h5>Landing Page</h5>
+						<img src="./images/Landing page.png" alt="" srcset="">
+					</section>
+					<section>
+						<h5>About Page</h5>
+						<img src="./images/About page.png" alt="" srcset="">
+					</section>
+					<section>
+						<h5>Contact Page</h5>
+						<img src="./images/Contact page.png" alt="" srcset="">
+					</section>
+					<section>
+						<h5>Events Page</h5>
+						<img src="./images/Events Page.png" alt="" srcset="">
+					</section>
+					<section>
+						<h5>Members Page</h5>
+						<img src="./images/Members page.png" alt="" srcset="">
+					</section>
+					<section>
+						<h5>Featured Page</h5>
+						<img src="./images/Featured page.png" alt="" srcset="">
+					</section>
 				</section>
 			</div>
 		</div>
