enhancement : changed the paths for images & Added the slides for stack to be used.

--- a/index.html
+++ b/index.html
@@ -23,27 +23,41 @@
 				<section>
 					<section>
 						<h5>Landing Page</h5>
-						<img src="./images/Landing page.png" alt="" srcset="">
+						<img src="./images/web-prototypes/Landing_page.png" alt="" srcset="">
 					</section>
 					<section>
 						<h5>About Page</h5>
-						<img src="./images/About page.png" alt="" srcset="">
+						<img src="./images/web-prototypes/About_page.png" alt="" srcset="">
 					</section>
 					<section>
 						<h5>Contact Page</h5>
-						<img src="./images/Contact page.png" alt="" srcset="">
+						<img src="./images/web-prototypes/Contact_page.png" alt="" srcset="">
 					</section>
 					<section>
 						<h5>Events Page</h5>
-						<img src="./images/Events Page.png" alt="" srcset="">
+						<img src="./images/web-prototypes/Events_page.png" alt="" srcset="">
 					</section>
 					<section>
 						<h5>Members Page</h5>
-						<img src="./images/Members page.png" alt="" srcset="">
+						<img src="./images/web-prototypes/Members_page.png" alt="" srcset="">
 					</section>
 					<section>
 						<h5>Featured Page</h5>
-						<img src="./images/Featured page.png" alt="" srcset="">
+						<img src="./images/web-prototypes/Featured_page.png" alt="" srcset="">
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Tech Stack's to be used</h2>
+					</section>
+					<section>
+						<h4>Frontend Stack</h4>
+					</section>
+					<section>
+						<h4>Backend Stack</h4>
+					</section>
+					<section>
+						<h4>Design Stack</h4>
 					</section>
 				</section>
 			</div>
