enhancement : Added the stack to be used for backend

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 				</section>
 				<section>
 					<section>
+						<h2>Website Design Prototypes</h2>
+					</section>
+					<section>
 						<h5>Landing Page</h5>
 						<img src="./images/web-prototypes/Landing_page.png" alt="" srcset="">
 					</section>
@@ -51,13 +54,18 @@
 						<h2>Tech Stack's to be used</h2>
 					</section>
 					<section>
-						<h4>Frontend Stack</h4>
+						<h3>Frontend Stack</h3><br/>
 					</section>
 					<section>
-						<h4>Backend Stack</h4>
+						<h3>Backend Stack</h3><br/>
+						<ul>
+							<li>Django : Framework</li><br/>
+							<li>DataStax : DataBase</li><br/>
+							<li>Heroku : Test Server</li>
+						</ul>
 					</section>
 					<section>
-						<h4>Design Stack</h4>
+						<h3>Design Stack</h3>
 					</section>
 				</section>
 			</div>
