enhancement : Completed all the slides for tech stacks.

--- a/index.html
+++ b/index.html
@@ -55,17 +55,28 @@
 					</section>
 					<section>
 						<h3>Frontend Stack</h3><br/>
+						<ul>
+							<li> <a href="https://reactjs.org/">React.js</a> : Framework</li>
+							or
+							<li><a href="https://nextjs.org/">Next.js</a> : Framework</li>
+						</ul>
 					</section>
 					<section>
 						<h3>Backend Stack</h3><br/>
 						<ul>
-							<li>Django : Framework</li><br/>
-							<li>DataStax : DataBase</li><br/>
-							<li>Heroku : Test Server</li>
+							<li> <a href="https://www.djangoproject.com/">Django</a> : Framework</li><br/>
+							<li> <a href="https://www.datastax.com/">DataStax</a> : DataBase</li><br/>
+							<li> <a href="https://www.heroku.com/">Heroku</a> : Test Server</li>
 						</ul>
 					</section>
 					<section>
-						<h3>Design Stack</h3>
+						<h3>Design & Editing Stack</h3><br/>
+						<ul>
+							<li><a href="https://www.canva.com/">Canav</a> : Tool</li><br/>
+							<li>Anything goes long <br/> as it does the job</li>
+							<p>or</p>
+							<li>Decided by All<br/>Graphic's Designer's</li>
+						</ul>
 					</section>
 				</section>
 			</div>
