enhancement : Added the must use stack.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 						<h2>Tech Stack's to be used</h2>
 					</section>
 					<section>
+						<h3>Must have</h3><br/>
+						<ul>
+							<li> <a href="https://git-scm.com">git</a> : VCS</li><br>
+							<li> <a href="http://github.com">Github</a> : Repo <br/>management</li><br>
+						</ul>
+					</section>
+					<section>
 						<h3>Frontend Stack</h3><br/>
 						<ul>
 							<li> <a href="https://reactjs.org/">React.js</a> : Framework</li>
