enhancement : Completed the Presentation ;)

--- a/index.html
+++ b/index.html
@@ -86,6 +86,41 @@
 						</ul>
 					</section>
 				</section>
+				<section>
+					<h2>Things We wish from SB</h2><p></p>
+					<ul>
+						<li>Permision for Creating a <br/> 
+							<a href="https://docs.github.com/en/organizations/collaborating-with-groups-in-organizations/about-organizations">
+								Github
+							</a> orginization
+						</li><br/>
+						<li>Permision for Creating a <br/> 
+							<a href="https://discord.com/">
+								Discord
+							</a> orginization
+						</li><br/>
+						<li>Permision to hold <br/> regular meetups (virtual)</li><br/>
+						<li>Letter of Acceptance</li>
+					</ul>
+				</section>
+				<section data-markdown>
+					<textarea data-template>
+					### [Workflow & Tentative Dates](index.html#/4)
+
+					| Date      | | |Task 		         |
+					|  :----    | | |  ----:              |
+					| 1/9/2021  | | | Project Anouncement |
+					| 3/9/2021  | | | Git & Guthub Wrkshp |
+					| 5/9/2021  | | | Contributions Open  |
+					| 20/9/2021 | | | Static MVP          |
+					| 30/9/2021 | | | Frontend Complete   |
+					| 30/10/2021| | | Backend Complete    |
+					
+					</textarea>
+				  </section>
+				<section>
+					<h2>Thank you</h2>
+				</section>
 			</div>
 		</div>
 
