fix : Some minor fixes like Typos.

--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
 					<section>
 						<h3>Design & Editing Stack</h3><br/>
 						<ul>
-							<li><a href="https://www.canva.com/">Canav</a> : Tool</li><br/>
-							<li>Anything goes long <br/> as it does the job</li>
-							<p>or</p>
-							<li>Decided by All<br/>Graphic's Designer's</li>
+							<li><a href="https://www.canva.com/">Canav</a> : Designing</li><br/>
+							<li><a href="https://www.vegascreativesoftware.com/in/vegas-pro/">Vegas Pro</a> : Editing</li><br/>
+							<li>Other Decided by All<br/>Graphic's Designer's</li><br/>
 						</ul>
 					</section>
 				</section>
@@ -97,7 +96,7 @@
 						<li>Permision for Creating a <br/> 
 							<a href="https://discord.com/">
 								Discord
-							</a> orginization
+							</a> Server
 						</li><br/>
 						<li>Permision to hold <br/> regular meetups (virtual)</li><br/>
 						<li>Letter of Acceptance</li>
