fix : fixed some minor Typos

--- a/index.html
+++ b/index.html
@@ -88,18 +88,17 @@
 				<section>
 					<h2>Things We wish from SB</h2><p></p>
 					<ul>
-						<li>Permision for Creating a <br/> 
+						<li>Permission for Creating a <br/> 
 							<a href="https://docs.github.com/en/organizations/collaborating-with-groups-in-organizations/about-organizations">
 								Github
-							</a> orginization
+							</a> organization
 						</li><br/>
-						<li>Permision for Creating a <br/> 
+						<li>Permission for Creating a <br/> 
 							<a href="https://discord.com/">
 								Discord
 							</a> Server
 						</li><br/>
-						<li>Permision to hold <br/> regular meetups (virtual)</li><br/>
-						<li>Letter of Acceptance</li>
+						<li>Permission to hold <br/> regular meetups (virtual)</li><br/>
 					</ul>
 				</section>
 				<section data-markdown>
