Fix : Hid the parts that were "confedientail"

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-						<h3>Proposal for SB Website</h3>
-						<p> - by Takshak Ramteke</p>
+					<!--	<h3>Proposal for SB Website</h3>
+						<p> - by Takshak Ramteke</p> -->
 				</section>
 				<section>
 					<section>
@@ -49,7 +49,7 @@
 						<img src="./images/web-prototypes/Featured_page.png" alt="" srcset="">
 					</section>
 				</section>
-				<section>
+			<!--	<section>
 					<section>
 						<h2>Tech Stack's to be used</h2>
 					</section>
@@ -115,7 +115,7 @@
 					| 30/10/2021| | | Backend Complete    |
 					
 					</textarea>
-				  </section>
+				  </section> -->
 				<section>
 					<h2>Thank you</h2>
 				</section>
