fix : Hid the unnecessary part

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<!--	<h3>Proposal for SB Website</h3>
+			<!--	<section>
+						<h3>Proposal for SB Website</h3>
 						<p> - by Takshak Ramteke</p> -->
 				</section>
 				<section>
